tests/integration/snapshots/integration__diagnostic_snapshots__diag_constructor_pattern_arity.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "constructor `Some` expects 1 field, but the pattern has 2"
  span:
    start: 54
    end: 64
  severity: Error
  phase: TypeChecking
