tests/integration/snapshots/integration__diagnostic_snapshots__diag_duplicate_effect_in_annotation.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "function 'test' declares duplicate effect: Throw(Int), Throw(Int)"
  span:
    start: 37
    end: 58
  severity: Error
  labels:
    - span:
        start: 14
        end: 35
      message: first matching effect annotation is here
  phase: TypeChecking
