tests/integration/snapshots/integration__diagnostic_snapshots__diag_effects_that_type_arguments_can_merge.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "function 'merge' declares `Throw` more than once with arguments that can be the same type"
  span:
    start: 121
    end: 142
  severity: Error
  labels:
    - span:
        start: 100
        end: 119
      message: first matching effect annotation is here
  phase: TypeChecking
