tests/integration/snapshots/integration__diagnostic_snapshots__diag_handler_arm_wrong_signature.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "handler arm has 2 parameter(s), but operation 'set' expects 1"
  span:
    start: 337
    end: 338
  severity: Error
  phase: TypeChecking
