tests/integration/snapshots/integration__diagnostic_snapshots__diag_heterogeneous_list_literal.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "type error in function 'values': expected `Nat`, found `Bool`"
  span:
    start: 32
    end: 41
  severity: Error
  phase: TypeChecking
