tests/integration/snapshots/integration__diagnostic_snapshots__diag_main_must_return_nil.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "function 'main' must return Nil, but returns `Int`"
  span:
    start: 0
    end: 23
  severity: Error
  phase: TypeChecking
- message: "type error in function 'main': expected `Int`, found `Nat`"
  span:
    start: 17
    end: 23
  severity: Error
  phase: TypeChecking
