tests/integration/snapshots/integration__diagnostic_snapshots__diag_missing_handler_arm.snap
---
source: tests/integration/diagnostic_snapshots.rs
expression: result.diagnostics
---
- message: "handling `State` is missing an arm for `set`"
  span:
    start: 204
    end: 320
  severity: Error
  phase: TypeChecking
